2006-08-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/sag/pam_loginuid.xml: New.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_loginuid.xml.

	* configure.in: Add modules/pam_loginuid/Makefile.
	* modules/Makefile.am: Add pam_loginuid sub directory.

	* libpam/pam_static_modules.h: Add pam_loginuid.

	* modules/pam_loginuid/Makefile.am: New.
	* modules/pam_loginuid/tst-pam_loginuid: New.
	* modules/pam_loginuid/pam_loginuid.8.xml: New.
	* modules/pam_loginuid/pam_loginuid.8: New, generated from XML source.
	* modules/pam_loginuid/pam_loginuid.c: New.
	* modules/pam_loginuid/README.xml: New.
	* modules/pam_loginuid/README: New, generated from XML source.

2006-08-29  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_exec/pam_exec.c (call_exec): Add required third
	argument to open() call with O_CREAT flag set.

2006-08-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Remove
	duplicate code.

2006-08-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.6.2

	* modules/pam_lastlog/pam_lastlog.c (last_login_date): Create
	lastlog file if it does not exist.

	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Check
	for error from getting second token.
	* xtests/Makefile.am: Add tst-pam_cracklib1
	* xtests/tst-pam_cracklib1.c: New, check for pam_cracklib seg.fault.
	* xtests/tst-pam_cracklib1.pamd: New, config for cracklib test.

2006-08-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/tst-pam_dispatch4.c: New test.
	* xtests/tst-pam_dispatch4.pamd: PAM config for new test.

2006-08-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.6.1

2006-08-09  David Howells  <dhowells@redhat.com>

	* modules/pam_keyinit/pam_keyinit.c (kill_keyrings): Set real uid
	to user's before revoking.
	(pam_sm_open_session): Remember the uid.

2006-08-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_umask/pam_umask.c (setup_limits_from_gecos):
	Add error handling.